# whms-discord-bot

./: .gitignore  pyproject.toml  swear_words.txt
src/: config.py  leveling.py  main.py
